# xmas-lights

./: Cargo.toml  Embed.toml  README.md  openocd.gdb
.cargo/: config
src/: main.rs
