[package]
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2018"
readme = "README.md"
name = "blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
#stm32f4xx-hal = { version = "0.8.3", features = ["stm32f411", "rt"]}
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", rev = "d1123d896feabecb17148423e05a1495782484bd", features = ["stm32f411", "rt", "tim2", "rtic", "rtic-monotonic"]}
fugit = "0.3.0"
cortex-m-rtic = "0.6.0-rc.4"
#cortex-m-rtic = "0.5.3"

smart-leds-trait = {version = "0.2.0"}
smart-leds = {version = "0.3.0"}
ws2812-spi = {version = "0.4.0"}

# this lets you use `cargo fix`!
[[bin]]
name = "blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
